--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.7",
     "next": "16.1.1",
+    "next-intl": "^4.7.0",
     "next-seo": "^7.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
