--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.24.7",
+    "framer-motion": "^12.24.12",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-intl": "^4.7.0",
     "next-seo": "^7.0.1",
+    "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.17",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -36,7 +40,6 @@
     "eslint-config-next": "16.1.1",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
